getting weather from openweatherapi

--- a/.gitignore
+++ b/.gitignore
@@ -130,22 +130,13 @@ dmypy.json
 
 data
 processed
-CropPrediction.ipynb
-Rainfall.ipynb
-CropPrediction.ipynb
-Recommendation.ipynb
-CropPrediction1.ipynb
-CropRecommendation.ipynb
+*.ipynb
+*.joblib
+*.pkl
+*.pickle
+Report
 yield_columns.json
-crop_encoder.pkl
-crop_recommendation_rfc.pickle
-crop_yield_prediction_dt_model.pickle
 recommendation_columns.json
-state_encoder.pkl
-yield_rainfall_scaler.gz
-recommendation_N_scaler.gz
-recommendation_P_scaler.gz
-recommendation_K_scaler.gz
-recommendation_rainfall_scaler.gz
-recommendation_ph_scaler.gz
-recommendation_temperature_scaler.gz
+
+
+.vscode/
